--- a/css/style.css
+++ b/css/style.css
@@ -182,12 +182,13 @@ main {
   background-position: center;
   margin-right: 10px;
 }
-
+.mail {
+  transition: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
 .contacts-mail-tel:hover .mail,
 .contacts-mail-tel:focus .mail {
   fill: var(--accent-text-color);
-  transition: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .button-secondary {
   color: #212121;
@@ -206,6 +207,7 @@ button {
   font-style: normal;
   font-weight: 500;
   line-height: 1.25em;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .button-primery-st {
   color: #ffffff;
@@ -220,6 +222,7 @@ button {
   margin-right: auto;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .container .buttom {
   height: 54px;
@@ -232,14 +235,13 @@ button {
   border: 0px;
   border-radius: 4px;
   margin-right: 8px;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .row-button:hover,
 .row-button:focus {
   color: var(--with);
   background-color: var(--accent-text-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  transition: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .main {
   font-style: normal;
@@ -367,14 +369,14 @@ button {
   color: var(--with);
   padding: 63px 24px;
   opacity: 0;
-  /* pointer-events: none;  */
+
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  /* transition: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1); */
 }
 .pr-link {
   display: block;
+  transition: 550ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .pr-link:hover .wind-hover,
 .pr-link:focus .wind-hover {
@@ -438,7 +440,7 @@ ul {
   background-color: var(--with);
   border-radius: 4px;
   color: #757575;
-  padding: 34px 31px 46px 49px;
+  padding: 40px;
 
   font-size: 12px;
   line-height: 1.17em;
@@ -480,6 +482,7 @@ ul {
   width: 100%;
   height: 40px;
   outline: none;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .form-input-check {
   display: inline-block;
@@ -498,6 +501,7 @@ ul {
   padding: 3px;
   left: 12px;
   top: 12px;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .form-coment {
   padding: 12px 16px;
@@ -962,6 +966,7 @@ footer {
   /* filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15)); */
   margin-right: 12px;
   background-color: inherit;
+  color: rgba(255, 255, 255, 0.6);
 }
 .foter-input::placeholder {
   color: rgba(255, 255, 255, 0.6);
